--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  confetti: ^0.6.0-nullsafety
+  confetti: ^0.7.0
   flare_flutter: ^3.0.2
   video_player: ^2.1.12
-  fl_chart: ^0.36.3
-  flutter_svg: ^0.22.0
+  fl_chart: ^0.55.1
+  flutter_svg: ^1.0.3
   funvas: ^0.1.3+5
   cached_network_image: ^3.1.0
   transparent_image: ^2.0.0
@@ -53,8 +53,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
-  flutter_launcher_icons: ^0.9.2
+  flutter_lints: ^2.0.1
+  flutter_launcher_icons: ^0.10.0
 
 flutter_icons:
   android: "launcher_icon"
